{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "4dcd2824-26c5-46db-9296-e9048c660908",
            "actions": [
                {
                    "name": "MoveCamera",
                    "type": "Value",
                    "id": "3766e4c4-b7ca-4946-a9c2-3b31526f52ce",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2(invertX=false)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Inspect",
                    "type": "Button",
                    "id": "10ae9738-b11b-4fb9-b96d-7846d18d486a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TryActivateArrowBlock",
                    "type": "Button",
                    "id": "5307c658-dea9-48eb-ab83-95f8326f6c48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "MovePointer",
                    "type": "Value",
                    "id": "74438886-8a0e-4efd-840e-974e9290ab01",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cdbb6bfc-48a6-4576-8bc6-0b6989ae3c1f",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard;Touchscreen",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc21bb06-93c1-4dbc-a190-ab26d6e8a999",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "TryActivateArrowBlock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "144ee448-ea28-4183-9f37-2b79185ceb01",
                    "path": "<Touchscreen>/touch0/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "TryActivateArrowBlock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9cd43899-b6e3-43f3-b1bb-1ea6117d733b",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard;Touchscreen",
                    "action": "MovePointer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "feffefe0-dbd1-4221-9538-84f39ac82f2d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Inspect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "642a1fd2-a156-4660-ad9e-126d5cb83b42",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Inspect",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse and Keyboard",
            "bindingGroup": "Mouse and Keyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}